Fixing fadein issues on mobile browsers

--- a/css/custom.css
+++ b/css/custom.css
@@ -14,6 +14,7 @@ p [] .fa {
 }
 body {
     background: linear-gradient(358deg, #d7cad7, #ffffff);
+    overflow: hidden;
     background-size: 400% 400%;
     -webkit-animation: AnimationName 30s ease infinite;
     -moz-animation: AnimationName 30s ease infinite;
@@ -163,6 +164,7 @@ svg {
     z-index: 1;
     top: 0;
     right: 0;
+    overflow: hidden;
     overflow-x: hidden;
     transition: 0.5s;
     padding-top: 55px;
@@ -217,30 +219,47 @@ svg {
         }
     }
 }
-.sidenav a {
-    padding: 8px 10px 5px 0px !important;
+
+
+/* SIDEBAR */
+
+#side-logo {height: auto; width:125px; opacity: 0;
+ min-width: 125px; }
+
+.sidenav ul {padding-top: 10px;}
+.sidenav ul li {
+    padding-top:0px;
     text-decoration: none;
-    font-size: 39px;
-    color: white;
     display: block;
     transition: 0.3s;
     text-align: center;
     font-family: Cuprum;
+    height:55px;
 }
+.sidenav ul li a {
+font-size: 38px;
+color: white;
+
+}
+canvas{overflow: hidden !important;}
 .sidenav a:hover,
 .offcanvas a:focus {
     color: #f1f1f1;
 }
 .sidenav .closebtn {
     position: absolute;
-    top: 0;
+    top: -20;
     right: 5px;
-    font-size: 36px;
+    
     margin-right: 10px;
+    height:20px;
 }
 .closebtn {
-    font-size: 50px !important;
-    right: 2px !important;
+    font-size: 60px !important;
+    right: 1px !important;
+    color:white;
+    height: 20px !important;
+
 }
 #main {
     transition: margin-right .5s;
@@ -310,18 +329,24 @@ object {
             opacity: 1;
             transition: .5s;
             display: none;
+            
+
         }
     }
     #social {
         position: fixed;
-        top: 450px;
+        top: 400px;
         opacity: 0;
         transition: .5s;
+        
+       
     }
 }
 #social {
     position: fixed;
     top: 400px;
+    width: 0px;
+
 }
 #social ul {
     padding: 0px;
@@ -410,8 +435,14 @@ object {
     user-select: none;
     width: 3.6rem;
 }
-/* Circle */
 
+
+
+/* Side Form */
+
+#side-login { vertical-align: bottom; padding-top: 40px; padding-left: 10px;}
+.clientlogin input { width: 93%; margin-right:20px;}
+/* Circle */
 .icon-button span {
     border-radius: 0;
     display: block;
@@ -444,7 +475,9 @@ object {
 .google-plus span {
     background-color: #fffe03;
 }
+
 /* Icons */
+.side-social {width:250px; padding-left:22px; padding-top:10px;}
 
 .icon-button i {
     background: none;
@@ -520,6 +553,7 @@ object {
 .set-appointment {
     position: absolute;
     width: 80%;
+    margin-top: .5rem;
     margin: 0 auto;
     bottom: 40px;
 }
@@ -602,7 +636,7 @@ button:hover {
 }
 #step3 {
     display: none;
-    margin-top: 65px;
+    margin-top: 20px;
 }
 #step3 h3 {
     text-align: center;
@@ -623,8 +657,21 @@ button:hover {
 .secpagebutton {} .clientlogin {
     margin-left: 10px;
 }
-#step4{
-    width: 80%;
-    margin: 0 auto;
+
+a {
+    color: #330033;
+}
+
+.contacttype{
+    margin-right: 50px;
+    padding-right: 50px;
+}
+
+.contactspace {
+    margin-left: 20px;
+}
+#table-animation{
+    transition: 1s ease-in-out;
     display: none;
+    opacity: 0;
 }
